// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Withdraw Asset > HydraDx -> KILT DEV > receiver events "xcmpQueue" 1`] = `
[
  {
    "data": {
      "messageHash": "(hash)",
      "messageId": "(hash)",
      "weight": {
        "proofSize": 0,
        "refTime": 800000000,
      },
    },
    "method": "Success",
    "section": "xcmpQueue",
  },
]
`;

exports[`Withdraw Asset > HydraDx -> KILT DEV > receiver events {"section":"system","method":"NewAccount"} 1`] = `
[
  {
    "data": {
      "account": "4rsmbFBYpVmWE2LHRsSZKxf22a8cbJLxMZqvVGkGkSDmDBcr",
    },
    "method": "NewAccount",
    "section": "system",
  },
]
`;

exports[`Withdraw Asset > HydraDx -> KILT DEV > sender events "xcmpQueue" 1`] = `
[
  {
    "data": {
      "messageHash": "(hash)",
    },
    "method": "XcmpMessageSent",
    "section": "xcmpQueue",
  },
]
`;

exports[`Withdraw Asset > HydraDx -> KILT at Block > receiver events "xcmpQueue" 1`] = `
[
  {
    "data": {
      "messageHash": "(hash)",
      "messageId": "(hash)",
      "weight": {
        "proofSize": 0,
        "refTime": 800000000,
      },
    },
    "method": "Success",
    "section": "xcmpQueue",
  },
]
`;

exports[`Withdraw Asset > HydraDx -> KILT at Block > receiver events {"section":"balances","method":"Withdraw"} 1`] = `
[
  {
    "data": {
      "amount": 1000000000000000,
      "who": "4qXPdpioJ6D8cgdeYXaukV2Y2oAQUHaX1VnGhdbSRqJn2CBt",
    },
    "method": "Withdraw",
    "section": "balances",
  },
]
`;

exports[`Withdraw Asset > HydraDx -> KILT at Block > receiver events {"section":"system","method":"NewAccount"} 1`] = `
[
  {
    "data": {
      "account": "4rsmbFBYpVmWE2LHRsSZKxf22a8cbJLxMZqvVGkGkSDmDBcr",
    },
    "method": "NewAccount",
    "section": "system",
  },
]
`;

exports[`Withdraw Asset > HydraDx -> KILT at Block > sender events "xcmpQueue" 1`] = `
[
  {
    "data": {
      "messageHash": "(hash)",
    },
    "method": "XcmpMessageSent",
    "section": "xcmpQueue",
  },
]
`;

exports[`Withdraw Asset > HydraDx -> KILT at Block > sender events {"section":"currencies","method":"Withdrawn"} 1`] = `
[
  {
    "data": {
      "amount": "(rounded 440000000000)",
      "currencyId": 0,
      "who": "7NL1GYCJu8cFSnWBLwET2X3fMdodw8T75zuxi59hA2bhdjQq",
    },
    "method": "Withdrawn",
    "section": "currencies",
  },
  {
    "data": {
      "amount": 1000000000000000,
      "currencyId": 28,
      "who": "7NL1GYCJu8cFSnWBLwET2X3fMdodw8T75zuxi59hA2bhdjQq",
    },
    "method": "Withdrawn",
    "section": "currencies",
  },
]
`;

exports[`Withdraw Asset > HydraDx -> KILT live > receiver events "xcmpQueue" 1`] = `
[
  {
    "data": {
      "messageHash": "(hash)",
      "messageId": "(hash)",
      "weight": {
        "proofSize": 0,
        "refTime": 800000000,
      },
    },
    "method": "Success",
    "section": "xcmpQueue",
  },
]
`;

exports[`Withdraw Asset > HydraDx -> KILT live > receiver events {"section":"system","method":"NewAccount"} 1`] = `
[
  {
    "data": {
      "account": "4rsmbFBYpVmWE2LHRsSZKxf22a8cbJLxMZqvVGkGkSDmDBcr",
    },
    "method": "NewAccount",
    "section": "system",
  },
]
`;

exports[`Withdraw Asset > HydraDx -> KILT live > sender events "xcmpQueue" 1`] = `
[
  {
    "data": {
      "messageHash": "(hash)",
    },
    "method": "XcmpMessageSent",
    "section": "xcmpQueue",
  },
]
`;
